[gd_scene load_steps=16 format=2]

[ext_resource path="res://player/RM001/RM001.tscn" type="PackedScene" id=1]
[ext_resource path="res://stages/RM001-Icon.png" type="Texture" id=2]
[ext_resource path="res://stages/RM003-Icon.png" type="Texture" id=3]
[ext_resource path="res://stages/RmntSelect-L.png" type="Texture" id=4]
[ext_resource path="res://stages/RmntSelect-R.png" type="Texture" id=5]
[ext_resource path="res://stages/StageMain.png" type="Texture" id=6]
[ext_resource path="res://stages/Stage002.png" type="Texture" id=7]
[ext_resource path="res://stages/StagePreviewBorder.png" type="Texture" id=8]
[ext_resource path="res://stages/RM002-Icon.png" type="Texture" id=9]
[ext_resource path="res://stages/RM001-IconSelected.png" type="Texture" id=10]
[ext_resource path="res://stages/rmnt_select.gd" type="Script" id=11]
[ext_resource path="res://player/RM002/RM002.tscn" type="PackedScene" id=12]
[ext_resource path="res://player/RM003/RM003.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 37.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60, 90 )

[node name="StageMain" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RmntSelect" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -28.0
margin_right = 82.0
margin_bottom = -4.0
alignment = 1
script = ExtResource( 11 )

[node name="Left" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="RM001" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
texture = ExtResource( 10 )

[node name="RM002" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 24.0
texture = ExtResource( 9 )

[node name="RM003" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 84.0
margin_right = 108.0
margin_bottom = 24.0
texture = ExtResource( 3 )

[node name="RM004" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 24.0
texture = ExtResource( 2 )

[node name="Right" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 140.0
margin_right = 164.0
margin_bottom = 24.0
texture = ExtResource( 5 )

[node name="StageSelect" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="ColorRect" parent="CanvasLayer/StageSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="Selection" type="Control" parent="CanvasLayer/StageSelect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -60.0
margin_right = 120.0
margin_bottom = 60.0

[node name="Preview" type="TextureRect" parent="CanvasLayer/StageSelect/Selection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 160, 90 )
texture = ExtResource( 7 )

[node name="Border" type="TextureRect" parent="CanvasLayer/StageSelect/Selection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -45.0
margin_right = 80.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 160, 90 )
texture = ExtResource( 8 )

[node name="WorldStaticBody" type="StaticBody2D" parent="."]
collision_mask = 18

[node name="Background" type="Sprite" parent="WorldStaticBody"]
position = Vector2( 160, 90 )
z_index = -2
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldStaticBody"]
position = Vector2( 160, 37.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldStaticBody"]
position = Vector2( 160, 216 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldStaticBody"]
position = Vector2( 376, 90 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldStaticBody"]
position = Vector2( -56, 90 )
shape = SubResource( 2 )

[node name="World" type="YSort" parent="."]

[node name="RM001" parent="World" instance=ExtResource( 1 )]
position = Vector2( 160, 120 )

[node name="RM002" parent="World" instance=ExtResource( 12 )]
position = Vector2( 160, 120 )

[node name="RM003" parent="World" instance=ExtResource( 13 )]
position = Vector2( 160, 120 )
